simplify stream API calls